# CancerRegistry_System

./: .gitattributes  .gitignore  Hospital_data  LICENSE  Project-Tree.md  README.md  Rule2.py  app.py  cancer_classify.py  clean.py  data.xlsx  field_mapping.py  main.py  note.txt  pyproject.toml  rename.py  rules.py  scratch_test.py  screen.py  test.ipynb  validate_測試資料.xlsx  verify_sort.py
Resource/: ~$工智慧提升癌症臨床資料處理效能之模組建置研究-定義.doc  以人工智慧提升癌症臨床資料處理效能之模組建置研究-定義.doc
data/: Hospital_data  reference_formats.json
modules/: cancer_classify.py  clean.py  cleaner.py  db.py  field_mapping.py  rules.py  validate.py
modules/clean/: fmt_114.py  fmt_42.py
modules/clean_pipeline/: cancer_classify.py  cleaner.py  field_mapping.py  fmt_114.py  fmt_115.py  fmt_129.py  fmt_42.py  fmt_45.py  fmt_50.py  validate.py
modules/reference_data/: residence.json
modules/services/: __init__.py  api.py  auth.py  clean.py  dashboard.py  data_gen.py  db.py  history.py  member.py
modules/special_rules/: class_case_rules.py  run.py  runner.py  special_validate_rules.py
services/: auth.py  clean.py  dashboard.py  data_gen.py  history.py  member.py
static/css/: dashboard.css  login.css  style.css
static/js/: app.js  clean.js  control.js  dashboard.js  dashboard_compare.js  dashboard_control.js  dashboard_i18n.js  dataGen.js  (+4 more)
templates/: analytics.html  base.html  clean.html  dashboard.html  dataGen.html  history.html  index.html  login.html  member.html  reports.html  settings.html
test/: test_FTP.py  test_FileServer.py  test_api.py  test_cancer_grouping.py  test_exportChart.py
(+45 files in other folders)
