[project]
name = "data-clean"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
    "flask>=3.1.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pdfplumber>=0.11.9",
    "pyodbc>=5.3.0",
    "python-dotenv>=1.2.2",
]
