[project]
name = "data-clean"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "flask>=3.1.3",
    "openai>=2.43.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pdfplumber>=0.11.9",
    "playwright>=1.61.0",
    "pyodbc>=5.3.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
]
